add download PDF function

--- a/src/app/tools/rental-property-report/rental-property-report.component.html
+++ b/src/app/tools/rental-property-report/rental-property-report.component.html
@@ -15,7 +15,8 @@
                 Report</a>
         </div>
         <div class="col-sm-2 col-xs-12 text-center p-1">
-            <a routerLink="#" class="btn-sm btn-dark btn-block text-light float-left" (click)="generatePDF()">Download PDF</a>
+            <a routerLink="/tools/rental-property-report" class="btn-sm btn-dark btn-block text-light float-left"
+                (click)="generatePDF()">Download PDF</a>
         </div>
     </div>
     <hr>
@@ -149,5 +150,150 @@
         </div>
     </div>
     <hr>
+
+    <div class="container visible " id="rentalPropertyReport">
+        <div class="row sticky-top bg-white" style="margin-left: 2rem; margin-right: 2rem">
+            <div class="col-sm col-xs-12 text-center">
+                <h4>{{property.address}}, {{property.city}}, {{property.state}} {{property.zip}}</h4>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-sm-4 col-xs-12">
+                <ul class="col-sm-12 col-xs-12">
+                    <li>
+                        <h5>{{purchasePrice}}</h5>
+                        <p class="title">PURCHASE PRICE</p>
+                    </li>
+                </ul>
+
+                <span><br></span>
+
+                <ul class="col-sm-12 col-xs-12">
+                    <li>
+                        <span class="title col-sm-6 col-xs-12 p-0">Purchase Closing Cost</span>
+                        <span class="col-sm-6 col-xs-12 p-0"><strong
+                                class="float-right">{{purchaseClosingCost}}</strong></span>
+                    </li>
+                    <li>
+                        <span class="title col-sm-6 col-xs-12 p-0">Estimated Repairs</span>
+                        <span class="col-sm-2 col-xs-12 p-0"><strong
+                                class="float-right">{{estimatedRepairCost}}</strong></span>
+                    </li>
+                    <li>
+                        <span class="title col-sm-6 col-xs-12 p-0">Total Project Cost</span>
+                        <span class="col-sm-2 col-xs-12 p-0"><strong
+                                class="float-right">{{totalProjectCost}}</strong></span>
+                    </li>
+                    <li>
+                        <span class="title col-sm-6 col-xs-12 p-0">After Repair Value</span>
+                        <span class="col-sm-2 col-xs-12 p-0"><strong
+                                class="float-right">{{afterRepairValue}}</strong></span>
+                    </li>
+                </ul>
+
+                <ul class="col-sm-12 col-xs-12">
+                    <li>
+                        <span class="title col-sm-6 col-xs-12 p-0">Down Payment</span>
+                        <span class="col-sm-6 col-xs-12 p-0"><strong class="float-right">{{downPayment}}</strong></span>
+                    </li>
+                    <span class="title col-sm-6 col-xs-12 p-0">Loan Amount</span>
+                    <span class="col-sm-6 col-xs-12 p-0"><strong class="float-right">{{loanAmount}}</strong></span>
+                    <li>
+                        <span class="title col-sm-6 col-xs-12 p-0">Loan Period</span>
+                        <span class="col-sm-6 col-xs-12 p-0"><strong class="float-right">{{loanPeriod}}</strong></span>
+                    </li>
+                    <li>
+                        <span class="title col-sm-6 col-xs-12 p-0">Loan Interest Rate</span>
+                        <span class="col-sm-6 col-xs-12 p-0"><strong
+                                class="float-right">{{loanInterestRate}}</strong></span>
+                    </li>
+                    <li>
+                        <span class="title col-sm-6 col-xs-12 p-0">Monthly P&I</span>
+                        <span class="col-sm-6 col-xs-12 p-0"><strong class="float-right">{{monthlyPI}}</strong></span>
+                    </li>
+                    <li>
+                        <span class="title col-sm-6 col-xs-12 p-0">Total Cash Needed</span>
+                        <span class="col-sm-6 col-xs-12 p-0"><strong
+                                class="float-right">{{totalCashNeeded}}</strong></span>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm-4 col-xs-12">
+                <img src="{{this.property.photo}}" alt="Property photos not available"
+                    class="rounded float-left img-fluid">
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="col-sm col-xs-12">
+            <div class="row">
+                <ul class="col-sm col-xs-12">
+                    <li>
+                        <h5>{{monthlyIncome}}</h5>
+                        <p class="title"><small>MONTHLY INCOME</small></p>
+                    </li>
+                    <li>
+                        <h5>{{NOI}}</h5>
+                        <p class="title"><small>NOI</small></p>
+                    </li>
+                </ul>
+                <ul class="col-sm col-xs-12">
+                    <li>
+                        <h5>{{monthlyExpenses}}</h5>
+                        <p class="title"><small>MONTHLY EXPENSES</small></p>
+                    </li>
+                    <li>
+                        <h5>{{totalCashNeeded}}</h5>
+                        <p class="title"><small>TOTAL CASH NEEDED</small></p>
+                    </li>
+                </ul>
+                <ul class="col-sm col-xs-12">
+                    <li>
+                        <h5>{{monthlyCashflow}}</h5>
+                        <p class="title"><small>MONTHLY CASHFLOW</small></p>
+                    </li>
+                    <li>
+                        <h5>{{ROI}}</h5>
+                        <p class="title"><small>CASH ON CASH ROI</small></p>
+                    </li>
+                </ul>
+                <ul class="col-sm col-xs-12">
+                    <li>
+                        <h5>{{proFormaCap}}</h5>
+                        <p class="title"><small>PRO FORMA CAP</small></p>
+                    </li>
+                    <li>
+                        <h5>{{purchaseCapRate}}</h5>
+                        <p class="title"><small>PURCHASE CAP RATE</small></p>
+                    </li>
+                </ul>
+            </div>
+            <div class="row">
+                <div class="col-sm col-xs-12 text-center">
+                    Expenses
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-sm-4 col-xs-12 p-0">
+                    <ul>
+                        <li>
+                            <span class="col-sm col-xs-12 p-0">Total operating expense:</span>
+                            <span class="col-sm col-xs-12 p-0 float-right">{{totalOperationExpenses}}</span>
+                        </li>
+                        <li>
+                            <span class="col-sm col-xs-12 p-0">Mortgage expenses:</span>
+                            <span class="col-sm col-xs-12 p-0 float-right">{{monthlyPI}}</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-8 col-xs-12 p-0">
+                    <app-pie-chart></app-pie-chart>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
