--- a/src/app/tools/rental-property-calc/rental-property-calc.component.html
+++ b/src/app/tools/rental-property-calc/rental-property-calc.component.html
@@ -42,9 +42,12 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group col-sm col-xs-12">
-                        <label for="propertyPhotos">Property Photos</label>
-                        <input type="url" class="form-control" id="propertyPhotos" value={{imgUrl}}
-                            (keyup)="setImgUrl($event)">
+                        <label for="propertyPhotos">Property Photo</label>
+                        <!--
+                            <input type='file' class="form-control" id="propertyPhotos" accept=".png, .jpg, .jpeg" (change)="setPropertyPhoto($event)"/>
+                        -->
+                        <input type="url" class="form-control" id="propertyPhotos" value={{propertyPhoto}}
+                            (keyup)="setPropertyPhoto($event)">
                     </div>
                 </div>
                 <div class="form-row">
@@ -58,7 +61,8 @@
         </div>
 
         <div class="col-sm-3 col-xs-12">
-            <img src="{{imgUrl}}" alt="Property photos not available" class="rounded float-left img-fluid">
+            <!--<img src="{{imgUrl}}" alt="Property photos not available" class="rounded float-left img-fluid">-->
+            <img src="{{propertyPhoto}}" alt="Property photos not available" class="rounded float-left img-fluid">
         </div>
     </div>
 </div>
