--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,128 +1,79 @@
-<header class="wide heading bg-dark text-light">
-    <div class="text-center">
-        <h2 id="timeline">F.I.R.E Roadmap</h2>
-        <p id="timelineSubtitle">Financial Independence Real Estate</p>
-    </div>
-</header>
-
 <div class="container">
-    <ul class="timeline">
-        <li>
-            <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
-            <div class="timeline-panel">
-                <div class="timeline-heading">
-                    <h4 class="timeline-title">2019.3-2020.2</h4>
-                    <hr>
-                </div>
-                <div class="timeline-body">
-                    <p>Learn all the basics</p>
-                </div>
+    <div class="row">
+        <div class="col-sm text-center">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Meanstack-624x250.jpg/300px-Meanstack-624x250.jpg"
+                class="img-fluid" alt="Responsive image">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm bg-dark text-light p-5">
+            <span>MEAN is a user-friendly full-stack JavaScript framework ideal for building dynamic websites and
+                applications.
+                It is a free and open-source stack designed to supply developers with a quick and organized method for
+                creating rapid prototypes of MEAN-based web applications. One of the main benefits of the MEAN stack is
+                that
+                a single language, JavaScript, runs on every level of the application, making it an efficient and modern
+                approach to web development.</span>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-sm">
+            <h2>Companies using MEAN</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2 col-xs-12">
+            <hr>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm bg-dark pt-5">
+            <img src="https://cdn2.codingdojo.com/new_design_image/individual_curriculum/mean/common_uses_of_mean_stack_development.png"
+                class="img-fluid" alt="Responsive image">
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-sm">
+            <h2>Common uses of MEAN</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2 col-xs-12">
+            <hr>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="col-sm col-xs-12 text-center">
+                <img src="https://cutecdn.codingdojo.com/optimized/mean/uses_of_mean.jpg"
+                    class="img-fluid rounded-circle" alt="Responsive image">
             </div>
-        </li>
-        <li class="timeline-inverted">
-            <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
-            <div class="timeline-panel">
-                <div class="timeline-heading">
-                    <h4 class="timeline-title">2020.3-2020.6</h4>
-                </div>
-                <hr>
-                <div class="timeline-body">
-                    <p>One move-in ready single family house</p>
-                </div>
+            <br>
+            <div class="col-sm col-xs-12 text-center">
+                <span>Large Scale Applications with User Connectivity</span>
             </div>
-        </li>
-        <li>
-            <div class="timeline-badge danger"><i class="glyphicon glyphicon-credit-card"></i></div>
-            <div class="timeline-panel">
-                <div class="timeline-heading">
-                    <h4 class="timeline-title">2020.12-2021.4</h4>
-                </div>
-                <hr>
-                <div class="timeline-body">
-                    <p>One duplex or two single family houses</p>
-                </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="col-sm col-xs-12 text-center">
+                <img src="https://cutecdn.codingdojo.com/optimized/mean/uses_of_mean_2.jpg"
+                    class="img-fluid rounded-circle" alt="Responsive image">
             </div>
-        </li>
-        <li class="timeline-inverted">
-            <div class="timeline-panel">
-                <div class="timeline-heading">
-                    <h4 class="timeline-title">2021.12-2022.4</h4>
-                </div>
-                <hr>
-                <div class="timeline-body">
-                    <p>Two duplex or three single family houses</p>
-                </div>
+            <br>
+            <div class="col-sm col-xs-12 text-center">
+                <span>Mobile App Back–End Development
+                </span>
             </div>
-        </li>
-        <!--
-        <li>
-            <div class="timeline-badge info"><i class="glyphicon glyphicon-floppy-disk"></i></div>
-            <div class="timeline-panel">
-                <div class="timeline-heading">
-                    <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-                </div>
-                <div class="timeline-body">
-                    <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis
-                        porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros
-                        vermeio, in elementis mé pra quem é amistosis quis leo.
-                        Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci
-                        latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-                    <hr>
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
-                            <i class="glyphicon glyphicon-cog"></i> <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                        </ul>
-                    </div>
-                </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="col-sm col-xs-12 text-center">
+                <img src="https://cutecdn.codingdojo.com/optimized/mean/uses_of_mean_3.jpg"
+                    class="img-fluid rounded-circle" alt="Responsive image">
             </div>
-        </li>
-        <li>
-            <div class="timeline-panel">
-                <div class="timeline-heading">
-                    <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-                </div>
-                <div class="timeline-body">
-                    <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis
-                        porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros
-                        vermeio, in elementis mé pra quem é amistosis quis leo.
-                        Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci
-                        latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-                </div>
+            <br>
+            <div class="col-sm col-xs-12 text-center">
+                <span>Real–Time Multi–user Interactivity</span>
             </div>
-        </li>
-        -->
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li class="timeline-inverted">
-            <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
-            <div class="timeline-panel">
-                <div class="timeline-heading">
-                    <h4 class="timeline-title">2029</h4>
-                </div>
-                <hr>
-                <div class="timeline-body">
-                    <p>F.I.R.E</p>
-                </div>
-            </div>
-        </li>
-    </ul>
-</div>
+        </div>
+    </div>
