--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,7 +22,7 @@
                 <a class="nav-link" routerLink="properties">PROPERTIES</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="home">JOURNALS</a>
+                <a class="nav-link" routerLink="journals">JOURNALS</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="home">PLAYGROUNDS</a>
