--- a/src/app/journals/journals.component.html
+++ b/src/app/journals/journals.component.html
@@ -17,10 +17,9 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">{{journal.title}}</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">{{journal.createDate}}</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">Created on {{journal.createDate}}</h6>
                     <p class="card-text">{{journal.description}}</p>
-                    <a href="#" class="card-link">Card link</a>
-                    <a href="#" class="card-link">Another link</a>
+                    <a href="#" class="card-link button">Delete</a>
                 </div>
             </div>
         </div>
