add delete button to journals

--- a/src/app/journals/journals.component.html
+++ b/src/app/journals/journals.component.html
@@ -19,7 +19,7 @@
                     <h5 class="card-title">{{journal.title}}</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Created on {{journal.createDate}}</h6>
                     <p class="card-text">{{journal.description}}</p>
-                    <a href="#" class="card-link button">Delete</a>
+                    <button class="btn btn-dark pull-right" (click)="createNewJournal()">Delete</button>
                 </div>
             </div>
         </div>
