--- a/src/app/journals/journals.component.html
+++ b/src/app/journals/journals.component.html
@@ -9,13 +9,15 @@
         <div class="col-sm">
             <form>
                 <div class="form-group">
-                    <input type="text" class="form-control" id="journalTitle" placeholder="Title">
+                    <input type="text" class="form-control" name="journalTitle" [(ngModel)]="journal.title"
+                        placeholder="Title">
                 </div>
                 <div class="form-group">
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"
-                        placeholder="Description"></textarea>
+                    <textarea class="form-control" name="exampleFormControlTextarea1" [(ngModel)]="journal.description"
+                        rows="5" placeholder="Description"></textarea>
                 </div>
-                <button class="btn btn-dark col-sm-2" (click)="createNewJournal()">Post</button>
+                <button class="btn btn-dark col-sm-2" *ngIf="!journal._id"
+                    (click)="createNewJournal(journal)">Post</button>
             </form>
         </div>
     </div>
