--- a/src/app/journals/journals.component.html
+++ b/src/app/journals/journals.component.html
@@ -5,7 +5,7 @@
 <br />
 <br />
 <div class="container">
-    <div class="row">
+    <div *ngIf="journal" class="row">
         <div class="col-sm">
             <form>
                 <div class="form-group">
@@ -16,8 +16,7 @@
                     <textarea class="form-control" name="exampleFormControlTextarea1" [(ngModel)]="journal.description"
                         rows="5" placeholder="Description"></textarea>
                 </div>
-                <button class="btn btn-dark col-sm-2" *ngIf="!journal._id"
-                    (click)="createNewJournal(journal)">Post</button>
+                <button class="btn btn-dark col-sm-2" (click)="createNewJournal(journal)">Post</button>
             </form>
         </div>
     </div>
