fix post journal function

--- a/src/app/journals/journals.component.html
+++ b/src/app/journals/journals.component.html
@@ -5,7 +5,7 @@
 <br />
 <br />
 <div class="container">
-    <div *ngIf="journal" class="row">
+    <div class="row">
         <div class="col-sm">
             <form>
                 <div class="form-group">
