--- a/src/app/properties/properties.component.html
+++ b/src/app/properties/properties.component.html
@@ -38,7 +38,7 @@
                     <h6 class="card-text text-primary">Rent: {{property.rent_zestimate}}</h6>
                     <div class="card-text text-dark">
                         <p>{{property.bedrooms}} bds | {{property.bathrooms}} ba | {{property.square_footage}} sqft </p>
-                        <p>{{property.address}} {{postal_code}}</p>
+                        <p>{{property.address}} {{property.postal_code}}</p>
                     </div>
                     <div class="mt-auto">
                         <p>{{property.title}}</p>
