update homepage for inovation day

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,86 @@
 <div class="container">
     <div class="row">
+        <div class="col-sm bg-dark text-light p-5">
+            <h1 class="text-center">Web Scraping</h1>
+            <span>Web scraping, web harvesting, or web data extraction is data scraping used for extracting data from
+                websites. Web scraping software may access the World Wide Web directly using the Hypertext Transfer
+                Protocol, or through a web browser. While web scraping can be done manually by a software user, the term
+                typically refers to automated processes implemented using a bot or web crawler. It is a form of copying,
+                in which specific data is gathered and copied from the web, typically into a central local database or
+                spreadsheet, for later retrieval or analysis.</span>
+            <footer class="blockquote-footer text-light pull-left text-right">
+                <cite title="Source Title">wikipedia</cite>
+            </footer>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-sm p-0">
+            <h2>Is Web Scraping legal?</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2 col-xs-12">
+            <hr>
+        </div>
+    </div>
+    <div class="row">
+        <p class="pl-3">
+            To know whether a website allows web scraping or not, you can look at the website’s “robots.txt” file. You
+            can find this file by appending “/robots.txt” to the URL that you want to scrape.
+        </p>
+        <p class="pl-3">For exmaple, <a href="https://www.zillow.com/robots.txt">https://www.zillow.com/robots.txt</a>
+        </p>
+    </div>
+    <div class="row">
+        <div class="col-sm p-0">
+            <h2>Why Python?</h2>
+            <p>Python is an interpreted, high-level, general-purpose programming language.</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2 col-xs-12">
+            <hr>
+        </div>
+    </div>
+    <div class="row">
+        <ul>
+            <li>Easy to learn and use</li>
+            <li>Popular and have large collections of libraries for data analysis, including some machine learning
+                libraries
+            </li>
+            <li>Python community is awesome!</li>
+        </ul>
+    </div>
+    <div class="row">
+        <div class="col-sm p-0">
+            <h2>How Web Scraping works?</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2 col-xs-12">
+            <hr>
+        </div>
+    </div>
+    <div class="row">
+        <ol>
+            <li>Find the URL that you want to scrape</li>
+            <li>Inspect the Page</li>
+            <li>Find the data you want to extract</li>
+            <li>Write the code</li>
+        </ol>
+    </div>
+</div>
+
+<hr>
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm bg-dark text-light p-5">
+            <h1 class="text-center">Single Page Web Application</h1>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-sm text-center">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Meanstack-624x250.jpg/300px-Meanstack-624x250.jpg"
                 class="img-fluid" alt="Responsive image">
@@ -18,7 +99,54 @@
     </div>
     <br>
     <div class="row">
+        <div class="col-sm p-0">
+            <h2>What is MEAN?</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2 col-xs-12">
+            <hr>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-sm">
+            <span>
+                <p><span class="text-info font-weight-bold">Node.js</span> is a server side JavaScript execution
+                    environment. It’s a
+                    platform built on JavaScript
+                    runtime. It helps in building highly scalable and concurrent applications rapidly.</p>
+                <p><span class="text-info font-weight-bold">Express</span> is lightweight framework used to build web
+                    applications in Node. It provides a number of
+                    robust features for building single and multi page web application.</p>
+                <p><span class="text-info font-weight-bold">MongoDB</span> is a schemaless NoSQL database system.
+                    MongoDB saves data in binary JSON format which makes
+                    it easier to pass data between client and server.</p>
+                <p><span class="text-info font-weight-bold">Angular</span> is a JavaScript framework developed by
+                    Google. It provides some awesome features like the
+                    two-way data binding. It’s a complete solution for rapid and awesome front end development.</p>
+            </span>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-sm p-0">
+            <h2>Alternatives of Angular</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2 col-xs-12">
+            <hr>
+        </div>
+    </div>
+    <div class="row">
+        <ul>
+            <li>MERN (React replacing Angular)</li>
+            <li>MEVN (Vue.js replacing Angular)</li>
+        </ul>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-sm p-0">
             <h2>Companies using MEAN</h2>
         </div>
     </div>
@@ -35,7 +163,7 @@
     </div>
     <br>
     <div class="row">
-        <div class="col-sm">
+        <div class="col-sm p-0">
             <h2>Common uses of MEAN</h2>
         </div>
     </div>
@@ -73,7 +201,8 @@
             </div>
             <br>
             <div class="col-sm col-xs-12 text-center">
-                <span>Real–Time Multi–user Interactivity</span>
+                <span>Real–Time Multi–User Interactivity</span>
             </div>
         </div>
     </div>
+</div>
