--- a/src/app/properties/properties.component.html
+++ b/src/app/properties/properties.component.html
@@ -12,13 +12,14 @@
                     (click)="search(inputCity.value, inputState.value)">Search</button>
             </div>
         </div>
-        
+
     </div>
 </div>
 
 <div class="container">
     <div class="row">
-        <div class="col-sm-12 col-xs-12 d-flex flex-column p-0">
+        <div class="col-sm-6 col-xs-12 d-flex flex-column pt-2 mr-auto">Total Results: {{propertiesCount}}</div>
+        <div class="col-sm-6 col-xs-12 d-flex flex-column p-0">
             <div class="btn-group ml-auto">
                 <button type="button" class="btn">Sort By</button>
                 <button type="button" class="btn dropdown-toggle dropdown-toggle-split" data-toggle="dropdown"
