update example for inovation day

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,7 +29,7 @@
             To know whether a website allows web scraping or not, you can look at the website’s “robots.txt” file. You
             can find this file by appending “/robots.txt” to the URL that you want to scrape.
         </p>
-        <p class="pl-3">For exmaple, <a href="https://www.zillow.com/robots.txt">https://www.zillow.com/robots.txt</a>
+        <p class="pl-3">For exmaple, <a target="_blank" href="https://www.strsoh.org/robots.txt">https://www.strsoh.org/robots.txt</a>
         </p>
     </div>
     <div class="row">
