add demo and code links for inovation day

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,7 +29,8 @@
             To know whether a website allows web scraping or not, you can look at the website’s “robots.txt” file. You
             can find this file by appending “/robots.txt” to the URL that you want to scrape.
         </p>
-        <p class="pl-3">For exmaple, <a target="_blank" href="https://www.strsoh.org/robots.txt">https://www.strsoh.org/robots.txt</a>
+        <p class="pl-3">For exmaple, <a target="_blank"
+                href="https://www.strsoh.org/robots.txt">https://www.strsoh.org/robots.txt</a>
         </p>
     </div>
     <div class="row">
@@ -69,6 +70,19 @@
             <li>Find the data you want to extract</li>
             <li>Write the code</li>
         </ol>
+    </div>
+    <div class="row">
+        <div class="col-sm p-0">
+            <h2>Code</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2 col-xs-12">
+            <hr>
+        </div>
+    </div>
+    <div class="row">
+        <a href="https://github.com/WangBian/zillowSpider" target="_blank">https://github.com/WangBian/zillowSpider</a>
     </div>
 </div>
 
@@ -123,7 +137,7 @@
                     it easier to pass data between client and server.</p>
                 <p><span class="text-info font-weight-bold">Angular</span> is a JavaScript framework developed by
                     Google. It provides some awesome features like the
-                    two-way data binding. It’s a complete solution for rapid and awesome front end development.</p>
+                    two-way data binding. It’s a complete solution for rapid and nice-looking front end development.</p>
             </span>
         </div>
     </div>
@@ -205,4 +219,34 @@
             </div>
         </div>
     </div>
+    <br>
+    <div class="row">
+        <div class="col-sm p-0">
+            <h2>Code and Demo</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-2 col-xs-12">
+            <hr>
+        </div>
+    </div>
+    <div class="row">
+        <ul>
+            <li>
+                <a href="https://sur-real-estate.herokuapp.com/home"
+                    target="_blank">https://sur-real-estate.herokuapp.com/home</a>
+            </li>
+            <li>
+                <a href="https://github.com/WangBian/surRealEstate"
+                    target="_blank">https://github.com/WangBian/surRealEstate</a>
+            </li>
+            <li>
+                <a href="https://dashboard.heroku.com/apps/sur-real-estate"
+                    target="_blank">https://dashboard.heroku.com/apps/sur-real-estate</a>
+            </li>
+        </ul>
+    </div>
+    <br>
+    <br>
+    <br>
 </div>
